# TestTask-for-JuniorC-Dev

./: CMakeLists.txt  MiniParser.cpp  MiniParser.h  README.md  XmlException.cpp  XmlException.h  XmlWriter.cpp  XmlWriter.h  data.xml  interval.h  main.cpp
Tests/: tests_main.cpp
